# image_processor

./: CMakeLists.txt  Crop.cpp  Crop.h  Distortion.cpp  Distortion.h  EdgeDetection.cpp  EdgeDetection.h  Filter.cpp  Filter.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  Image.cpp  Image.h  MatrixFilter.cpp  MatrixFilter.h  Negative.cpp  Negative.h  README.md  Sharpening.cpp  Sharpening.h  bmp.cpp  bmp.h  image_processor.cpp  reference  test.cpp
